--- a/pages/costos.html
+++ b/pages/costos.html
@@ -94,10 +94,10 @@
     </main>
     <footer>
         <div class="cajaFooterUno">
-                <a href="https://www.instagram.com/electricidad_cen/?hl=es-la" ><img class="logoRedes" src="../images/instagram.png"></a>
-                <a href="https://www.instagram.com/electricidad_cen/?hl=es-la" ><img class="logoRedes" src="../images/facebook.png"></a>
-                <a href="https://www.instagram.com/electricidad_cen/?hl=es-la" ><img class="logoRedes" src="../images/linkedin.png"></a>
-                <a href="https://www.instagram.com/electricidad_cen/?hl=es-la" ><img class="logoRedes" src="../images/twitter.png"></a>
+            <a href="https://www.instagram.com/electricidad_cen/?hl=es-la" ><img class="logoRedes" src="../images/instagram.png" alt="Instagram"></a>
+            <a href="https://www.instagram.com/electricidad_cen/?hl=es-la" ><img class="logoRedes" src="../images/facebook.png" alt="Facebook"></a>
+            <a href="https://www.instagram.com/electricidad_cen/?hl=es-la" ><img class="logoRedes" src="../images/linkedin.png" alt="Linkedin"></a>
+            <a href="https://www.instagram.com/electricidad_cen/?hl=es-la" ><img class="logoRedes" src="../images/twitter.png" alt="Twitter"></a>
         </div>
         <div class="cajaFooterDos">
             <p>Centurion Todo en Electricidad</p>
