--- a/pages/electricidad.html
+++ b/pages/electricidad.html
@@ -31,28 +31,28 @@
     <main>
         <section>
             <h1>Electricidad</h1>
-            <div class="contenedorCenter"><img src="../images/banner.gif" alt="" class="banner"></div>
+            <div class="contenedorCenter"><img src="../images/banner.gif" alt="banner" class="banner"></div>
         </section>
         <section class="sectionProductos">
             <article class="carta">
                 <h2 class="carta__titulo">Servicios</h2>
                 <p class="carta__parrafo">Instalaciones electricas monofásicas y trifásicas.</p>
-                <div class="carta__imagen"><img width="196px" height="188px" src="../images/servicios.jpg" alt=""></div>
+                <div class="carta__imagen"><img width="196px" height="188px" src="../images/servicios.jpg" alt="Técnico instalador"></div>
             </article>
             <article class="carta">
                 <h2 class="carta__titulo">Iluminacion</h2>
                 <p class="carta__parrafo">Cálculo de iluminacion para todo tipo de entornos.</p>
-                <div class="carta__imagen"><img width="196px" height="188px" src="../images/iluminacion.jpg" alt=""></div>
+                <div class="carta__imagen"><img width="196px" height="188px" src="../images/iluminacion.jpg" alt="Artefactos iluminacion"></div>
             </article>
             <article class="carta">
                 <h2 class="carta__titulo">Tableros</h2>
                 <p class="carta__parrafo">Armado de tableros de comando, control y potencia.</p>
-                <div class="carta__imagen"><img width="196px" height="188px" src="../images/tableros.jpg" alt=""></div>
+                <div class="carta__imagen"><img width="196px" height="188px" src="../images/tableros.jpg" alt="Tableros eléctricos"></div>
             </article>
             <article class="carta">
                 <h2 class="carta__titulo">Emergencias</h2>
                 <p class="carta__parrafo">Atención de emergencias en zona CABA y GBA 24/7.</p>
-                <div class="carta__imagen"><img width="196px" height="188px" src="../images/emergencias.jpg" alt=""></div>
+                <div class="carta__imagen"><img width="196px" height="188px" src="../images/emergencias.jpg" alt="Logo emergencia"></div>
             </article>
         </section>
         <div class="whatsapp">
@@ -63,10 +63,10 @@
     </main>
     <footer>
         <div class="cajaFooterUno">
-                <a href="https://www.instagram.com/electricidad_cen/?hl=es-la" ><img class="logoRedes" src="../images/instagram.png"></a>
-                <a href="https://www.instagram.com/electricidad_cen/?hl=es-la" ><img class="logoRedes" src="../images/facebook.png"></a>
-                <a href="https://www.instagram.com/electricidad_cen/?hl=es-la" ><img class="logoRedes" src="../images/linkedin.png"></a>
-                <a href="https://www.instagram.com/electricidad_cen/?hl=es-la" ><img class="logoRedes" src="../images/twitter.png"></a>
+                <a href="https://www.instagram.com/electricidad_cen/?hl=es-la" ><img class="logoRedes" src="../images/instagram.png" alt="Instagram"></a>
+                <a href="https://www.instagram.com/electricidad_cen/?hl=es-la" ><img class="logoRedes" src="../images/facebook.png" alt="Facebook"></a>
+                <a href="https://www.instagram.com/electricidad_cen/?hl=es-la" ><img class="logoRedes" src="../images/linkedin.png" alt="Linkedin"></a>
+                <a href="https://www.instagram.com/electricidad_cen/?hl=es-la" ><img class="logoRedes" src="../images/twitter.png" alt="Twitter"></a>
         </div>
         <div class="cajaFooterDos">
             <p>Centurion Todo en Electricidad</p>
