--- a/pages/generadores.html
+++ b/pages/generadores.html
@@ -31,28 +31,28 @@
     <main>
         <section>
             <h1>Generadores</h1>
-            <div class="contenedorCenter"><img src="../images/banner.gif" alt="" class="banner"></div>
+            <div class="contenedorCenter"><img src="../images/banner.gif" alt="banner" class="banner"></div>
         </section>
         <section class="sectionProductos">
             <article class="carta">
                 <h2 class="carta__titulo">Tablero de control</h2>
                 <p class="carta__parrafo">Instalación y venta de tableros de comando para control manual y automatico de generadores.</p>
-                <div class="carta__imagen"><img width="196px" height="196px" src="../images/comando.jpg" alt=""></div>
+                <div class="carta__imagen"><img width="196px" height="196px" src="../images/comando.jpg" alt="Tablero de comando"></div>
             </article>
             <article class="carta">
                 <h2 class="carta__titulo">Mantenimiento</h2>
                 <p class="carta__parrafo">Mantenimiento mensual, anual. Cambio de aceite, filtros y liquido refrigerante. Mantenimiento general.</p>
-                <div class="carta__imagen"><img width="196px" height="196px" src="../images/mantenimiento.jpg" alt=""></div>
+                <div class="carta__imagen"><img width="196px" height="196px" src="../images/mantenimiento.jpg" alt="Filtros de aceite"></div>
             </article>
             <article class="carta">
                 <h2 class="carta__titulo">Grupos nafteros y gas</h2>
                 <p class="carta__parrafo">Fabricación, instalación, reparacion y venta de generadores nafteros. Se realizan conversiones a GAS.</p>
-                <div class="carta__imagen"><img width="196px" height="196px" src="../images/naftero.jpg" alt=""></div>
+                <div class="carta__imagen"><img width="196px" height="196px" src="../images/naftero.jpg" alt="Generador naftero"></div>
             </article>
             <article class="carta">
                 <h2 class="carta__titulo">Grupos diesel</h2>
                 <p class="carta__parrafo">Fabricación, instalación, reparación y venta de generadores diesel desde 40 a 500kva.</p>
-                <div class="carta__imagen"><img width="196px" height="196px" src="../images/diesel.jpg" alt=""></div>
+                <div class="carta__imagen"><img width="196px" height="196px" src="../images/diesel.jpg" alt="Generador diesel"></div>
             </article>
         </section>
         <div class="whatsapp">
@@ -63,10 +63,10 @@
     </main>
     <footer>
         <div class="cajaFooterUno">
-                <a href="https://www.instagram.com/electricidad_cen/?hl=es-la" ><img class="logoRedes" src="../images/instagram.png"></a>
-                <a href="https://www.instagram.com/electricidad_cen/?hl=es-la" ><img class="logoRedes" src="../images/facebook.png"></a>
-                <a href="https://www.instagram.com/electricidad_cen/?hl=es-la" ><img class="logoRedes" src="../images/linkedin.png"></a>
-                <a href="https://www.instagram.com/electricidad_cen/?hl=es-la" ><img class="logoRedes" src="../images/twitter.png"></a>
+            <a href="https://www.instagram.com/electricidad_cen/?hl=es-la" ><img class="logoRedes" src="../images/instagram.png" alt="Instagram"></a>
+            <a href="https://www.instagram.com/electricidad_cen/?hl=es-la" ><img class="logoRedes" src="../images/facebook.png" alt="Facebook"></a>
+            <a href="https://www.instagram.com/electricidad_cen/?hl=es-la" ><img class="logoRedes" src="../images/linkedin.png" alt="Linkedin"></a>
+            <a href="https://www.instagram.com/electricidad_cen/?hl=es-la" ><img class="logoRedes" src="../images/twitter.png" alt="Twitter"></a>
         </div>
         <div class="cajaFooterDos">
             <p>Centurion Todo en Electricidad</p>
