--- a/pages/seguridad.html
+++ b/pages/seguridad.html
@@ -32,29 +32,29 @@
         <section>
             <h1>Seguridad</h1>
             <div class="contenedorCenter">
-                <img src="../images/banner.gif" alt="" class="banner">
+                <img src="../images/banner.gif" alt="banner" class="banner">
             </div>
         </section>
         <section class="sectionProductos">
             <article class="carta">
                 <h2 class="carta__titulo">Camaras de seguridad</h2>
                 <p class="carta__parrafo">Instalación y venta de camaras de seguridad y DVR HD, FULL HD, 4k. Visualiza todo desde tu celular!</p>
-                <div class="carta__imagen"><img width="196px" height="196px" src="../images/camaras.jpg" alt=""></div>
+                <div class="carta__imagen"><img width="196px" height="196px" src="../images/camaras.jpg" alt="Camaras"></div>
             </article>
             <article class="carta">
                 <h2 class="carta__titulo">Cerco electrico</h2>
                 <p class="carta__parrafo">Instalación de cercos eléctricos perimetrales para protección de residencias y ganados.</p>
-                <div class="carta__imagen"><img width="196px" height="196px" src="../images/cerco.jpg" alt=""></div>
+                <div class="carta__imagen"><img width="196px" height="196px" src="../images/cerco.jpg" alt="Cerco eléctrico"></div>
             </article>
             <article class="carta">
                 <h2 class="carta__titulo">Barreras Infrarrojas</h2>
                 <p cclass="carta__parrafo">Instalación de barreras Infrarrojas perimetrales para protección exclusiva de residencias y comercios.</p>
-                <div class="carta__imagen"><img width="196px" height="196px" src="../images/barrera.jpg" alt=""></div>
+                <div class="carta__imagen"><img width="196px" height="196px" src="../images/barrera.jpg" alt="Barrera infrarroja"></div>
             </article>
             <article class="carta">
                 <h2 class="carta__titulo">Alarmas</h2>
                 <p class="carta__parrafo">Instalación de alarmas, cableadas e inalambricas, con manejo remoto a través de app Android/IOS.</p>
-                <div class="carta__imagen"><img width="196px" height="196px" src="../images/alarma.jpg" alt=""></div>
+                <div class="carta__imagen"><img width="196px" height="196px" src="../images/alarma.jpg" alt="Teclado alarma"></div>
             </article>
         </section>
         <div class="whatsapp">
@@ -65,10 +65,10 @@
     </main>
     <footer>
         <div class="cajaFooterUno">
-                <a href="https://www.instagram.com/electricidad_cen/?hl=es-la" ><img class="logoRedes" src="../images/instagram.png"></a>
-                <a href="https://www.instagram.com/electricidad_cen/?hl=es-la" ><img class="logoRedes" src="../images/facebook.png"></a>
-                <a href="https://www.instagram.com/electricidad_cen/?hl=es-la" ><img class="logoRedes" src="../images/linkedin.png"></a>
-                <a href="https://www.instagram.com/electricidad_cen/?hl=es-la" ><img class="logoRedes" src="../images/twitter.png"></a>
+            <a href="https://www.instagram.com/electricidad_cen/?hl=es-la" ><img class="logoRedes" src="../images/instagram.png" alt="Instagram"></a>
+            <a href="https://www.instagram.com/electricidad_cen/?hl=es-la" ><img class="logoRedes" src="../images/facebook.png" alt="Facebook"></a>
+            <a href="https://www.instagram.com/electricidad_cen/?hl=es-la" ><img class="logoRedes" src="../images/linkedin.png" alt="Linkedin"></a>
+            <a href="https://www.instagram.com/electricidad_cen/?hl=es-la" ><img class="logoRedes" src="../images/twitter.png" alt="Twitter"></a>
         </div>
         <div class="cajaFooterDos">
             <p>Centurion Todo en Electricidad</p>
