--- a/index.html
+++ b/index.html
@@ -16,17 +16,26 @@
 <body>
     <header>
         <div>
-            <a href="index.html"><img src="./images/logo.jpg" alt="Centurion electricidad"></a>
-        </div>  
-        <nav class="navegador">   
-            <ul class="navegador__lista">
-                    <li class="navegador__item"><a class="navegador__link" href="pages/electricidad.html">Electricidad</a></li>
-                    <li class="navegador__item"><a class="navegador__link" href="pages/seguridad.html">Seguridad</a></li>
-                    <li class="navegador__item"><a class="navegador__link" href="pages/generadores.html">Generadores</a></li>
-                    <li class="navegador__item"><a class="navegador__link" href="pages/costos.html">Costos</a></li>
-                    <li class="navegador__item"><a class="navegador__link" href="pages/contacto.html">Contacto</a></li>
-            </ul>
+            <a href="../index.html"><img src="./images/logo.png" alt="Centurion"></a>
+        </div>
+        <div class="navegador"> 
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <div class="container-fluid">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0 navbar-nav-scroll">
+                    <li class="navegador__item"><a class="navegador__link" href="./pages/electricidad.html"> Electricidad </a></li>
+                    <li class="navegador__item"><a class="navegador__link" href="./pages/seguridad.html"> Seguridad </a></li>
+                    <li class="navegador__item"><a class="navegador__link" href="./pages/generadores.html"> Generadores </a></li>
+                    <li class="navegador__item"><a class="navegador__link" href="./pages/costos.html"> Costos </a></li>
+                    <li class="navegador__item"><a class="navegador__link" href="./pages/contacto.html"> Contacto </a></li>
+                </ul>
+                </div>
+            </div>
         </nav>
+        </div> 
     </header>
     <main>
         <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
