--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -8,7 +8,6 @@
     <title>Contactenos</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilosbem.css">
-    <link rel="stylesheet" href="../css/estilos.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400;1,700&family=Prompt:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -18,15 +17,24 @@
         <div>
             <a href="../index.html"><img src="../images/logo.jpg" alt="Centurion"></a>
         </div>  
-        <nav class="navegador">   
-            <ul class="navegador__lista">
-                    <li class="navegador__item"><a class="navegador__link" href="electricidad.html">Electricidad</a></li>
-                    <li class="navegador__item"><a class="navegador__link" href="seguridad.html">Seguridad</a></li>
-                    <li class="navegador__item"><a class="navegador__link" href="generadores.html">Generadores</a></li>
-                    <li class="navegador__item"><a class="navegador__link" href="costos.html">Costos</a></li>
-                    <li class="navegador__item"><a class="navegador__link" href="contacto.html">Contacto</a></li>
-            </ul>
-        </nav>
+        <div class="navegador"> 
+            <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+                <div class="container-fluid">
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0 navbar-nav-scroll">
+                        <li class="navegador__item"><a class="navegador__link" href="electricidad.html"> Electricidad </a></li>
+                        <li class="navegador__item"><a class="navegador__link" href="seguridad.html"> Seguridad </a></li>
+                        <li class="navegador__item"><a class="navegador__link" href="generadores.html"> Generadores </a></li>
+                        <li class="navegador__item"><a class="navegador__link" href="costos.html"> Costos </a></li>
+                        <li class="navegador__item"><a class="navegador__link" href="contacto.html"> Contacto </a></li>
+                    </ul>
+                    </div>
+                </div>
+            </nav>
+            </div> 
     </header>
     <main>
         <h1>Contacto</h1>
@@ -36,7 +44,6 @@
             </div>
         </section>
         <section class="contenedorCenter">
-            <p id="parrafoContacto">Para todo tipo de preguntas, comentarios e inquietudes; por favor llámanos al número 1123989662 o completa el formulario a continuación:</p>
             <form>
                 <!-- Name input -->
                 <div class="form-outline mb-4">
@@ -73,9 +80,9 @@
         </div>
         <div class="cajaFooterDos">
             <p>Centurion Todo en Electricidad</p>
-            <p><svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-telephone" viewBox="0 0 16 16"><path d="M3.654 1.328a.678.678 0 0 0-1.015-.063L1.605 2.3c-.483.484-.661 1.169-.45 1.77a17.568 17.568 0 0 0 4.168 6.608 17.569 17.569 0 0 0 6.608 4.168c.601.211 1.286.033 1.77-.45l1.034-1.034a.678.678 0 0 0-.063-1.015l-2.307-1.794a.678.678 0 0 0-.58-.122l-2.19.547a1.745 1.745 0 0 1-1.657-.459L5.482 8.062a1.745 1.745 0 0 1-.46-1.657l.548-2.19a.678.678 0 0 0-.122-.58L3.654 1.328zM1.884.511a1.745 1.745 0 0 1 2.612.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z"/></svg> 11-2398-9662</p>
-            <p><svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-geo-alt" viewBox="0 0 16 16"><path d="M12.166 8.94c-.524 1.062-1.234 2.12-1.96 3.07A31.493 31.493 0 0 1 8 14.58a31.481 31.481 0 0 1-2.206-2.57c-.726-.95-1.436-2.008-1.96-3.07C3.304 7.867 3 6.862 3 6a5 5 0 0 1 10 0c0 .862-.305 1.867-.834 2.94zM8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10z"/><path d="M8 8a2 2 0 1 1 0-4 2 2 0 0 1 0 4zm0 1a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/></svg> Bonifacini 1839, San martin, Buenos Aires.</p>
-            <p><svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-envelope" viewBox="0 0 16 16"><path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1H2zm13 2.383-4.758 2.855L15 11.114v-5.73zm-.034 6.878L9.271 8.82 8 9.583 6.728 8.82l-5.694 3.44A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.739zM1 11.114l4.758-2.876L1 5.383v5.73z"/></svg> generadoresfiat@gmail.com</p>
+            <p><img src="../images/telefono.png"> 11-2398-9662</p>
+            <p><img src="../images/ubicacion.png"> Bonifacini 1839, San martin, Bs.As.</p>
+            <p><img src="../images/correo.png"> generadoresfiat@gmail.com</p>
         </div>
         <div class="cajaFooterTres">
             <p>Todos los derechos reservados. Diseño Web: Jonathan E. Centurion 2021</p>
